--- a/LCTMoodle/Views/NguoiDung/DangKy.cshtml
+++ b/LCTMoodle/Views/NguoiDung/DangKy.cshtml
@@ -24,7 +24,7 @@
                         </section>
                         <section class="noi-dung">
                             <article class="input">
-                                <input type="text" name="TenTaiKhoan" />
+                                <input type="text" name="TenTaiKhoan" data-validate="bat-buoc"/>
                             </article>
                         </section>
                     </li>
@@ -34,7 +34,7 @@
                         </section>
                         <section class="noi-dung">
                             <article class="input">
-                                <input type="password" name="MatKhau" />
+                                <input type="password" name="MatKhau" data-validate="bat-buoc" />
                             </article>
                         </section>
                     </li>
@@ -54,7 +54,7 @@
                         </section>
                         <section class="noi-dung">
                             <article class="input">
-                                <input type="text" name="Email" />
+                                <input type="text" name="Email" data-validate="bat-buoc email"/>
                             </article>
                         </section>
                     </li>
@@ -74,7 +74,7 @@
                         </section>
                         <section class="noi-dung">
                             <article class="input">
-                                <input data-input-type="lct-lich" name="NgaySinh" value="" />
+                                <input data-input-type="lct-lich" name="NgaySinh" value="" data-validate="bat-buoc" />
                             </article>
                         </section>
                     </li>
