--- a/LCTMoodle/Views/KhoaHoc/Tao.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/Tao.cshtml
@@ -14,7 +14,7 @@
     <section class="tieu-de">
         Tạo khóa học
     </section>
-    <form id="tao_khoa_hoc_form" class="noi-dung lct-form">
+    <form id="tao_khoa_hoc_form" class="noi-dung lct-form" data-validate-auto>
         <article>
             <ul>
                 <li>
