Upgrade tap tin

--- a/LCTMoodle/Views/TrangChu/FormMau.cshtml
+++ b/LCTMoodle/Views/TrangChu/FormMau.cshtml
@@ -157,7 +157,7 @@
                     </section>
                     <section class="noi-dung">
                         <article class="input">
-                            <input type="file" name="name" value="" data-thu-muc="HinhDaiDien_ChuDe" />
+                            <input type="file" name="name" value="" />
                         </article>
                     </section>
                 </li>
