--- a/LCTMoodle/Views/NguoiDung/DangKy.cshtml
+++ b/LCTMoodle/Views/NguoiDung/DangKy.cshtml
@@ -104,7 +104,7 @@
                         </section>
                         <section class="noi-dung">
                             <article class="input">                                
-                                <input type="checkbox" name="GhiNho" data-text="Chấp nhận quy định của Mạng xã hội LCT Moodle" />                                
+                                <input type="checkbox" name="ChapNhanQuyDinh" data-text="Chấp nhận quy định của Mạng xã hội LCT Moodle" />                                
                             </article>
                         </section>
                     </li>                    
