--- a/LCTMoodle/Views/NguoiDung/DangNhap.cshtml
+++ b/LCTMoodle/Views/NguoiDung/DangNhap.cshtml
@@ -34,7 +34,7 @@
                         </section>
                         <section class="noi-dung">
                             <article class="input">
-                                <input type="password" name="TenTaiKhoan" />
+                                <input type="password" name="MatKhau" />
                             </article>
                         </section>
                     </li>
