--- a/LCTMoodle/Views/NguoiDung/Index.cshtml
+++ b/LCTMoodle/Views/NguoiDung/Index.cshtml
@@ -34,13 +34,33 @@
         </div> 
         <div class="dong-noi-dung">
             <div class="tieu-de">Mật khẩu</div>
-            <div class="noi-dung" data-change="TenDangNhap">*****</div>
-            <a href="javascript:void(0)" class="chuc-nang pe-7s-pen" data-edit="TenDangNhap"></a>
+            <div class="noi-dung" data-change="MatKhau">*****</div>
+            <a href="javascript:void(0)" class="chuc-nang pe-7s-pen" data-edit="MatKhau"></a>
         </div>
         <div class="dong-noi-dung">
             <div class="tieu-de">Email</div>
-            <div class="noi-dung" data-change="TenDangNhap">penguinbluechip@gmail.com</div>
-            <a href="javascript:void(0)" class="chuc-nang pe-7s-pen" data-edit="TenDangNhap"></a>
+            <div class="noi-dung" data-change="Email">penguinbluechip@gmail.com</div>
+            <a href="javascript:void(0)" class="chuc-nang pe-7s-pen" data-edit="Email"></a>
         </div>       
+        <div class="dong-noi-dung">
+            <div class="tieu-de">Họ tên</div>
+            <div class="noi-dung" data-change="HoTen">Nguyễn Chiến</div>
+            <a href="javascript:void(0)" class="chuc-nang pe-7s-pen" data-edit="HoTen"></a>
+        </div>
+        <div class="dong-noi-dung">
+            <div class="tieu-de">Ngày sinh</div>
+            <div class="noi-dung" data-change="NgaySinh">28-4-1994</div>
+            <a href="javascript:void(0)" class="chuc-nang pe-7s-pen" data-edit="NgaySinh"></a>
+        </div>
+        <div class="dong-noi-dung">
+            <div class="tieu-de">Họ tên</div>
+            <div class="noi-dung" data-change="DiaChi">Địa chỉ</div>
+            <a href="javascript:void(0)" class="chuc-nang pe-7s-pen" data-edit="DiaChi"></a>
+        </div>
+        <div class="dong-noi-dung">
+            <div class="tieu-de">Số điện thoại</div>
+            <div class="noi-dung" data-change="SoDienThoai"></div>
+            <a href="javascript:void(0)" class="chuc-nang pe-7s-pen" data-edit="SoDienThoai"></a>
+        </div>
     </section>
 </section>
