Cap nhat phan dang nhap

--- a/LCTMoodle/Views/NguoiDung/DangKy.cshtml
+++ b/LCTMoodle/Views/NguoiDung/DangKy.cshtml
@@ -5,7 +5,7 @@
 @section Styles {
 }
 @section Scripts {    
-    <script type="text/javascript" src="/DangKy.js/NguoiDung"></script>
+    <script type="text/javascript" src="/NguoiDung.js/NguoiDung"></script>
 }
 
 <article class="hop-form hop-2-vien">
@@ -15,7 +15,7 @@
         để được trải nghiệm các khoá học bổ ích        
     </section>
     <section class="noi-dung">
-        <form class="lct-form" action="/NguoiDung/XuLyThem" method="POST" id="them_nguoi_dung">
+        <form class="lct-form" action="/NguoiDung/XuLyThem" method="POST" id="dang_ky">
             <article>
                 <ul>
                     <li>
