--- a/LCTMoodle/Views/NguoiDung/DangNhap.cshtml
+++ b/LCTMoodle/Views/NguoiDung/DangNhap.cshtml
@@ -5,7 +5,7 @@
 @section Styles {  
 }
 @section Scripts {
-
+    <script type="text/javascript" src="/NguoiDung.js/NguoiDung"></script>
 }
 
 <article class="hop-form hop-2-vien">
@@ -15,7 +15,7 @@
         Mạng xã hội học tập của mọi người
     </section>
     <section class="noi-dung">
-        <form class="lct-form" action="#" method="post">
+        <form class="lct-form" id="dang_nhap" action="/NguoiDung/XuLyKiemTraDangNhap" method="post">
             <article>
                 <ul>
                     <li>
