--- a/LCTMoodle/Views/KhoaHoc/Xem.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/Xem.cshtml
@@ -8,6 +8,7 @@
 
 @section Styles {
     <link href="/Xem.css/KhoaHoc/" rel="stylesheet" />
+    <link href="/Khung.css/BinhLuan/" rel="stylesheet" />
 }
 
 @section Scripts {
@@ -15,6 +16,7 @@
         var maKhoaHoc = '@khoaHoc.ma';
     </script>
     <script src="/Xem.js/KhoaHoc/"></script>
+    <script src="/Khung.js/BinhLuan/"></script>
 }
 
 <section class="khung-danh-sach-nhom"></section>
