--- a/LCTMoodle/Views/TrangChu/FormMau.cshtml
+++ b/LCTMoodle/Views/TrangChu/FormMau.cshtml
@@ -77,7 +77,7 @@
                     </section>
                     <section class="noi-dung">
                         <article class="input">
-                            <input disabled="disabled" type="text" name="name" data-mac-dinh="Mặc định (text)" placeholder="Hãy nhập..." />
+                            <input type="text" name="name" data-mac-dinh="Mặc định (text)" placeholder="Hãy nhập..." />
                         </article>
                     </section>
                 </li>
