--- a/LCTMoodle/Content/styles/KhoaHoc/Xem.css
+++ b/LCTMoodle/Content/styles/KhoaHoc/Xem.css
@@ -1,10 +1,17 @@
-﻿
+﻿.muc-bai-viet {
+    border: 1px solid #eee;
+    margin-bottom: 10px;
+}
+
+.khung-binh-luan {
+    border-top: 1px solid #f5f5f5;
+    background-color: #fcfcfc;
+}
+
 /*#region Khung bài viết */
 
 .khung-bai-viet {
-    border: 1px solid #eee;
     background-color: #fff;
-    margin-bottom: 10px;
 }
 
 .khung-bai-viet .khung-thong-tin {
